--- a/app/views/users/albums/photo.html.erb
+++ b/app/views/users/albums/photo.html.erb
@@ -22,7 +22,7 @@
       <%= @photo.viewed_num %>浏览 | <%= @photo.commented_num %>评论
     </div>
   </div>
-  <div class="comment">
+  <div class="comment" style="display: none;">
     <a href="#add_comment" class="button_gray float_r"><span>添加评论</span></a><h3>评论</h3>
     <div class="comment_list">
       <ul>
