--- a/app/views/wines/short_comments.html.erb
+++ b/app/views/wines/short_comments.html.erb
@@ -86,7 +86,7 @@ function initStarBar(starBar){
   var resultElement = starBar.children('input');
   var value = resultElement.val()/2;
   var desEl = starBar.children('span');
-  var descriptions = ['shit', 'no', 'just so so', 'good', 'perfect'];
+  var descriptions = ['欠佳',	'可接受','出色','非常不错	','质量一流'];
   var url = false;
 
   <% if @user_comment.present? %>
