[UPDATE] 更新Mine/Cellar
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,8 +8,8 @@
  *= require wines
  *= require uploadify 
  *= require_tree ./albums
- *= require_tree ./users
  *= require cellars
+ *= require mine
 */
 
 
