--- a/app/assets/stylesheets/mine.css.scss
+++ b/app/assets/stylesheets/mine.css.scss
@@ -1,3 +1,4 @@
-// Place all the styles related to the mine controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#cu_user_menu .info_menu .current a {
+  background: #900;
+  color: #FFF;
+}
