--- a/app/views/share/_footer.html.erb
+++ b/app/views/share/_footer.html.erb
@@ -1,4 +1,4 @@
-<% foot_nav = { :about_us => 'about_us', :contact_us => 'contact_us', :help => 'help', :private => 'private', :site_map => 'site_map'} %>
+<% foot_nav = { :about_us => '/about_us', :contact_us => '/contact_us', :help => '/help', :private => '/private', :site_map => '/site_map'} %>
 <div id="footer">
 	<div class="copyright">Copyright © 2011 Patrick, Inc. All rights reserved. </div>
 	<%= raw foot_nav.collect { |k, v| link_to t("nav.#{k}"), v }.join(" | ") %>
