--- a/app/views/users/albums/delete_photo.html.erb
+++ b/app/views/users/albums/delete_photo.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class="popup_footer">
   <div class="wine_bid_btn margin_auto" style="width:93px;">
-    <a href="javascript:$.fancybox.close(true);" class="button_gray float_r" >
+    <a href="javascript:;" onclick="$.fancybox.close(true);" class="button_gray float_r" >
       <span>取消</span>
     </a>
     <a href="javascript:delete_upload_photo(<%= params[:photo_id]%>);$.fancybox.close(true);" class="button_gray float_r mr5">
