--- a/app/views/users/albums/upload.html.erb
+++ b/app/views/users/albums/upload.html.erb
@@ -39,7 +39,8 @@
     'multi'         : true,
     'scriptData'    : upload_params,
     'auto'          : false,
-    'simUploadLimit': 5,
+    'simUploadLimit': 10,
+    'queueSizeLimit': 10,
 
     onComplete: function(e, id, obj, response, data){
       if( response > 0 )
