--- a/app/views/mine/albums/index.html.erb
+++ b/app/views/mine/albums/index.html.erb
@@ -1,6 +1,8 @@
-
+<%= render "/mine/sub_nav", :action => params[:action] %>
 <div class="title_btn clearfix">
-  <h2><%= @user.username %>的相册 <span class="count_b">(共<%= @albums.total_count %>个)</span></h2>
+  <a href="<%= url_for :action => 'new' %>" class="new_album fancybox.ajax button_gray float_r"><span>新建相册</span></a>
+  <a href="<%= url_for :action => 'upload' %>" class="button_gray float_r mr5"><span>添加照片</span></a>
+  <h2><%= current_user.username %>的相册 <span class="count_b">(共<%= @albums.total_count %>个)</span></h2>
 </div>
 <ul class="album_list clearfix">
   <% @albums.each do |album| %>
@@ -14,10 +16,11 @@
         <% end %>
       </a>
     </div>
-    <h3><a href="<%= url_for :action => 'show', :album_id => album.id %>"><%= album.name %></a></h3>
+    <h3><%= link_to album.name , {:action => :show, :album_id => album.id } %></h3>
     <div class="album_info"><%= album.photos_num %>张照片 2012-1-28更新<br/><%= album.viewed_num %>浏览 | <%= album.commented_num %>评论 | <%= album.liked_num %>喜欢</div>
   </li>
   <% end %>
+
 
 </ul>
 <div class="clear"></div>
