--- a/app/views/users/albums/photo.html.erb
+++ b/app/views/users/albums/photo.html.erb
@@ -70,7 +70,7 @@
   </div>
 </div>
 <div id="rightcol" class="other_content">
-  <h3><%= current_user.username %>的其他相册</h3>
+  <h3><%= @user.username %>的其他相册</h3>
   <ul class="other_album">
     <% @top_albums.each do |album| %>
     <li class="clearfix">
