--- a/app/views/mine/albums/upload_list.html.erb
+++ b/app/views/mine/albums/upload_list.html.erb
@@ -1,3 +1,4 @@
+<%= render "mine/sub_nav", :action => params[:action] %>
 <div id="cu_user_menu" class="clearfix">
   <span class="f14">《 <a href="community_albmu_list.html">返回相册首页</a></span>
 </div>
