--- a/app/views/mine/albums/new.html.erb
+++ b/app/views/mine/albums/new.html.erb
@@ -20,7 +20,7 @@
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td><a href="javascript:$('#new_album_form').submit();" class="button_gray float_l mr5"><%= t :create_album %></a><a href="javascript:$.fancybox.close(true);" class="button_gray float_l"><%= t :cancle %></a></td>
+        <td><a href="javascript:$('#new_album_form').submit();" class="button_gray float_l mr5"><span><%= t :add %></span></a><a href="javascript:$.fancybox.close(true);" class="button_gray float_l"><span><%= t :cancle %></span></a></td>
       </tr>
     </table>
   </div>
