--- a/app/views/mine/albums/edit.html.erb
+++ b/app/views/mine/albums/edit.html.erb
@@ -1,5 +1,5 @@
 <div id="cu_user_menu" class="clearfix">
-  <span class="f14">《 <a href="community_albmu_list.html">返回相册首页</a></span>
+  <span class="f14">《 <a href="<%= url_for :action => 'index' %>">返回相册首页</a></span>
 </div>
 <div class="title_btn clearfix">
   <h2>相册属性编辑-<%= @album.name %></h2>
