--- a/app/views/mine/cellars/index.html.erb
+++ b/app/views/mine/cellars/index.html.erb
@@ -15,8 +15,8 @@
 		<a title="搜索藏酒" onclick="this.blur();" class="button_gray" href="#"><span>搜索藏酒</span></a>
 	</div>
 	<div class="content">
-		<%= render "share/flash_notice" %>
-		
+		<%#= render "share/flash_notice" %>
+		<%= render_stickies %>
 		<table width="100%" cellspacing="0" cellpadding="0" border="0" class="winery_list mb30">
 			<tbody>
 				<tr>
