--- a/app/views/settings/_sub_nav.html.erb
+++ b/app/views/settings/_sub_nav.html.erb
@@ -1,12 +1,17 @@
-<% sub_menu = { "basic" => "/settings", "privacy" => "/settings/privacy", "invite" => "/settings/invite", "sync" => "/settings/sync" } %>
-<div id="navcontainer">
-	<ul id="navlist">
+<%= title @title %>
+<% sub_menu = { "basic" => "/settings", "avatar" => "/settings/avatar", "update_password" => "/settings/update_password",  "privacy" => "/settings/privacy", "invite" => "/settings/invite", "sync" => "/settings/sync" } %>
+
+<div id="cu_user_menu" class="clearfix">
+  <div class="info_menu">
+    <ul class="clearfix">
 		<% sub_menu.each do |action_name, url| %>
 		 <% if action == action_name %>
-			<li  id="active" ><%= link_to t("nav.sub_nav.settings.#{action_name}"),  url, {:id => "current"} %></li>
+			<li  class="current" ><%= link_to t("nav.sub_nav.settings.#{action_name}"),  url %></li>
 		 <% else %>
 			<li><%= link_to t("nav.sub_nav.settings.#{action_name}"), url %></li>
 		 <% end %>
 		<% end %>
-	</ul>
+    </ul>
+  </div>
+  <div class="clear"></div>
 </div>
