Update style of Stick
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/assets/stylesheets/stickies.css
+++ b/app/assets/stylesheets/stickies.css
@@ -10,8 +10,10 @@
 #stickies .notice_stickie,
 #stickies .debug_stickie
 {
-    margin: 10px 0;
-    padding: 8px;
+  margin-bottom: 1em;
+  padding: 0.8em;
+  text-align: center;
+  border: 2px solid #DDD;
 }
 
 #stickies .error_stickie
@@ -28,9 +30,10 @@
 
 #stickies .notice_stickie
 {
-    border: solid 1px #399c07;
-    background-color: #d7ffaf;
-}
+  background: none repeat scroll 0 0 #E6EFC2;
+   border-color: #C6D880;
+   color: #264409;
+  }
 
 #stickies .debug_stickie
 {
