--- a/app/views/settings/update_password.html.erb
+++ b/app/views/settings/update_password.html.erb
@@ -1,6 +1,5 @@
-<%= title @title %>
 <%= render "sub_nav", :action => params[:action]  %>
-
+<%= render_stickies %>
 <%= form_for @user, :validate => true, :url => url_for(:action => :update_password ), :html => { :method => :put } do |f| %>
 
   <%= f.hidden_field :reset_password_token %>
