--- a/app/views/users/albums/photo.html.erb
+++ b/app/views/users/albums/photo.html.erb
@@ -20,27 +20,29 @@
       <%= @photo.viewed_num %>浏览 | <%= @photo.commented_num %>评论
     </div>
   </div>
-  <div class="comment" style="display: none;">
+  <div class="comment">
     <a href="#add_comment" class="button_gray float_r"><span>添加评论</span></a><h3>评论</h3>
     <div class="comment_list">
       <ul>
+        <% @photo_comments.each do |comment| %>
         <li class="clearfix">
-          <div class="user_img"><a href="#"><img src="/images/test/user_img50.jpg" width="50" height="50" alt="user name" /></a></div>
+          <div class="user_img">
+            <a href="#"><img src="/images/test/user_img50.jpg" width="50" height="50" alt="user name" /></a>
+          </div>
           <div class="comment_main">
-            <div class="name_time_score"><div class="mr5"><a href="#">xiaoying</a> <span class="time">2012-2-8</span></div></div>
-            <div class="comment_content">好诱人的食物啊...</div>
+            <div class="name_time_score">
+              <div class="mr5">
+                <a href="#">xiaoying</a> 
+                <span class="time"><%= comment.created_at.strftime '%Y-%m-%d'%></span>
+              </div>
+            </div>
+            <div class="comment_content"><%= comment.comment %></div>
           </div>
           <div class="clear"></div>
         </li>
-        <li class="clearfix">
-          <div class="user_img"><a href="#"><img src="/images/test/user_img50.jpg" width="50" height="50" alt="user name" /></a></div>
-          <div class="comment_main">
-            <div class="name_time_score"><div class="mr5"><a href="#">xiaoying</a> <span class="time">2012-2-8</span></div></div>
-            <div class="comment_content">看的我都要流口水了，人家正饿着呐！</div>
-          </div>
-          <div class="clear"></div>
-        </li>
-        <li class="clearfix">
+        <% end %>
+
+        <li style="display: none;" class="clearfix">
           <div class="user_img"><a href="#"><img src="/images/test/user_img50.jpg" width="50" height="50" alt="user name" /></a></div>
           <div class="comment_main">
             <div class="name_time_score"><div class="mr5"><a href="#">xiaoying</a> <span class="time">2012-2-8</span></div></div>
@@ -49,22 +51,24 @@
           </div>
           <div class="clear"></div>
         </li>
-        <li class="clearfix">
-          <div class="user_img"><a href="#"><img src="/images/test/user_img50.jpg" width="50" height="50" alt="user name" /></a></div>
-          <div class="comment_main">
-            <div class="name_time_score"><div class="mr5"><a href="#">xiaoying</a> <span class="time">2012-2-8</span></div></div>
-            <div class="comment_content">这是哪家店的呀？我也要吃！</div>
-          </div>
-          <div class="clear"></div>
-        </li>
       </ul>
       <div class="comment_form mt20">
-        <div class="user_img"><img src="/assets/base/test/user_img50.jpg" width="50" height="50" /></div>
-        <div class="comment_input"><a name="add_comment" id="add_comment"></a>
-          <div class="reply_content2">这是哪家店的啊？我也要吃！<span class="reply_to">by aluoaluo</span></div>
-          <textarea class="comment" name="" cols="" rows=""></textarea>
-          <a href="" class="button_gray float_l mt10"><span>OK, 加上去</span></a>
+        <%= form_for @photo_comment, :url => '/users/albums/photo_comment' do |f| %>
+        <input type="hidden" name="photo_comment[photo_id]" value="<%= @photo.id %>" />
+        <%= f.hidden_field :reply_id %>
+        <div class="user_img">
+          <img src="/assets/base/test/user_img50.jpg" width="50" height="50" />
         </div>
+        <div class="comment_input">
+          <a name="add_comment" id="add_comment"></a>
+          <div style="display: none;" class="reply_content2">
+            这是哪家店的啊？我也要吃！
+            <span class="reply_to">by aluoaluo</span>
+          </div>
+          <%= f.text_area :comment, :class => 'comment' %>
+          <a href="javascript:;" onclick="$(this).parent().parent().submit();" class="button_gray float_l mt10"><span>OK, 加上去</span></a>
+        </div>
+        <% end %>
       </div>
     </div>
   </div>
