--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,7 +43,7 @@
                      <tr>
                        <td>&nbsp;</td>
 					<td>
-						<%= link_to "javascript:void(0)", :class => "button_red" do  %>
+						<%= link_to "javascript:void(0)", :class => "button_green" do  %>
 						<span>立即注册</span>
 						<% end %>
 
