--- a/app/views/mine/albums/show.html.erb
+++ b/app/views/mine/albums/show.html.erb
@@ -2,15 +2,15 @@
 
 <div class="title_btn clearfix">
 
-	<%= link_to url_for(:action => :index), :class => "button_gray float_r" do  %>
+	<%= link_to url_for(:action => :index), :class => "button_gray float_r" do %>
 	<span>返回相册首页</span>
 	<% end %>
 
-	<%= link_to url_for(:action => :upload, :album_id => params[:album_id]), :class => "button_gray float_r mr5" do  %>
+	<%= link_to url_for(:action => :upload, :album_id => params[:album_id]), :class => "button_gray float_r mr5" do %>
 	<span>添加照片</span>
 	<% end %>
 
-	<%= link_to url_for(:action => :edit, :album_id => @album.id), :class => "button_gray float_r mr5" do  %>
+	<%= link_to url_for(:action => :edit, :album_id => @album.id), :class => "button_gray float_r mr5" do %>
 	<span>编辑相册属性</span>
 	<% end %>
 
@@ -43,13 +43,17 @@
       <div class="photo_info"><%= photo.created_at.strftime '%Y-%m-%d'%> 上传 | 
         <a href="<%= url_for :action => 'delete_photo', :photo_id => photo.id %>" class="fancybox_delete_photo fancybox.ajax">删除</a>
         <br/>
-        <%= photo.viewed_num%>浏览 | <%= photo.liked_num%>喜欢 | <a href="community_photo_detail.html"><%= photo.commented_num%>评论</a></div>
+        <%= photo.viewed_num%>浏览 | <%= photo.liked_num%>喜欢 | <a href="community_photo_detail.html"><%= photo.commented_num%>评论</a>
+      </div>
+        <% if photo.is_cover == 1 %>
+        <br/>封面
+        <% end %>
     </div>
   <% end %>
   <div class="clear"></div>
 </div>
 <div class="pagination">
- <%= paginate @photos, :outer_window => 2 %> 
+ <%= paginate @photos, :outer_window => 2 %>
 </div>
 <div class="bottom_action_space clearfix mt20">
   <% if @is_owner && @album.name != 'avatar' %>
